add fonts & colors & header

--- a/src/mixins/icons.pug
+++ b/src/mixins/icons.pug
@@ -1,4 +1,6 @@
 mixin icon(name)
+    if name === 'lang-arrow'
+        include /img/svg/lang-arrow.svg
     if name === 'test'
         include /img/svg/test.svg
     if name === 'test2'
