--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -5,7 +5,7 @@
     width: 100%;
     max-width: calc(var(--width-container) + var(--offsets, 20px) * 2);
 
-    margin: var(--wrapper-margin) auto;
+    margin: var(--wrapper-margin) auto 0;
     padding: 0 var(--offsets, 20px);
 
     & > img {
