--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,16 +1,64 @@
 @font-face {
-  font-family: "Roboto";
+  font-family: "Poppins";
   font-display: swap;
-  src: url("../../dist/fonts/Roboto-Regular.woff2") format("woff2"),url("../../dist/fonts/Roboto-Regular.woff") format("woff");
+  src: url("../../dist/fonts/Poppins-Black.woff2") format("woff2"),url("../../dist/fonts/Poppins-Black.woff") format("woff");
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-display: swap;
+  src: url("../../dist/fonts/Poppins-Bold.woff2") format("woff2"),url("../../dist/fonts/Poppins-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-display: swap;
+  src: url("../../dist/fonts/Poppins-ExtraLight.woff2") format("woff2"),url("../../dist/fonts/Poppins-ExtraLight.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-display: swap;
+  src: url("../../dist/fonts/Poppins-Italic.woff2") format("woff2"),url("../../dist/fonts/Poppins-Italic.woff") format("woff");
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-display: swap;
+  src: url("../../dist/fonts/Poppins-Medium.woff2") format("woff2"),url("../../dist/fonts/Poppins-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-display: swap;
+  src: url("../../dist/fonts/Poppins-Regular.woff2") format("woff2"),url("../../dist/fonts/Poppins-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Staatliches";
+  font-family: "Poppins";
   font-display: swap;
-  src: url("../../dist/fonts/Staatliches-Regular.woff2") format("woff2"),url("../../dist/fonts/Staatliches-Regular.woff") format("woff");
-  font-weight: 400;
+  src: url("../../dist/fonts/Poppins-SemiBold.woff2") format("woff2"),url("../../dist/fonts/Poppins-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-display: swap;
+  src: url("../../dist/fonts/Poppins-Thin.woff2") format("woff2"),url("../../dist/fonts/Poppins-Thin.woff") format("woff");
+  font-weight: 100;
   font-style: normal;
 }
 
