--- a/src/scss/settings/mixins/_fonts.scss
+++ b/src/scss/settings/mixins/_fonts.scss
@@ -5,73 +5,69 @@ $font-size-default: 18;
 @function rem($pxValue) {
     @return math.div($pxValue, $font-size-default) + rem;
 }
-@mixin font-display() {
-    font-size: rem(57);
-    line-height: rem(64);
-    letter-spacing: 0;
-
-    @include media-max-sm {
-        font-size: rem(36);
-        line-height: rem(44);
-    }
-}
-
-@mixin font-headline() {
+@mixin font-h1() {
     font-size: rem(32);
-    line-height: rem(40);
-    letter-spacing: 0;
+    line-height: 120%;
+    font-weight: 600;
 
     @include media-max-sm {
-        font-size: rem(24);
-        line-height: 136%;
+        font-size: rem(26);
+        line-height: 130%;
     }
 }
 
-@mixin font-title() {
-    font-size: rem(25);
-    line-height: 136%;
-    letter-spacing: 0;
+@mixin font-h2() {
+    font-size: rem(26);
+    line-height: 130%;
+    font-weight: 600;
+
+    @include media-max-sm {
+        font-size: rem(22);
+    }
+}
+
+@mixin font-h3() {
+    font-size: rem(22);
+    line-height: 130%;
+    font-weight: 500;
+
+    @include media-max-sm {
+        font-size: rem(20);
+        line-height: 140%;
+    }
+}
+
+@mixin font-h4() {
+    font-size: rem(20);
+    line-height: 140%;
+    font-weight: 500;
 
     @include media-max-sm {
         font-size: rem(18);
+        line-height: 150%;
     }
 }
 
-@mixin font-label() {
-    font-size: rem(18);
-    font-weight: 600;
-    line-height: 136%;
-    text-transform: uppercase;
-
-    @include media-max-sm {
-        font-size: rem(14);
-    }
-}
-
-@mixin font-label-m() {
-    font-size: rem(14);
-    font-weight: 600;
-    line-height: 136%;
-    text-transform: uppercase;
-    letter-spacing: 0;
-}
-
-@mixin font-body() {
-    font-size: rem(18);
+@mixin font-text-m() {
+    font-size: rem(16);
+    line-height: 150%;
     font-weight: 400;
-    line-height: 136%;
-
-    @include media-max-sm {
-        font-size: rem(14);
-    }
 }
 
-@mixin font-body-m {
+@mixin font-text-m-medium() {
+    font-size: rem(16);
+    line-height: 150%;
+    font-weight: 500;
+}
+
+@mixin font-text-s() {
     font-size: rem(14);
-    line-height: 136%;
+    line-height: 150%;
+    font-weight: 400;
 }
 
-@mixin font-body-s {
-    font-size: rem(12);
-    line-height: rem(16);
+@mixin font-text-s-bold() {
+    font-size: rem(14);
+    line-height: 150%;
+    font-weight: 600;
 }
