--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -9,10 +9,8 @@ html(lang="en")
         include ../components/blocks/header.pug
 
         main
-            section.wrapper
-                h2 Today IPL Match Prediction
-                include ../components/fragments/button.pug
-                +button('btn--outlined', 'Test')
+            include /components/blocks/section-hero.pug
+
 
             include ../components/blocks/section-faq.pug 
 
