--- a/src/scss/fragments/btn.scss
+++ b/src/scss/fragments/btn.scss
@@ -44,7 +44,7 @@
         }
     }
 
-    &--outlined {
+    &--secondary {
         color: var(--secondary-button-color, #fff);
         background: var(--secondary-button-bg, #4ca8ff);
 
