add bonus card & slot card

--- a/src/components/fragments/toc-section.pug
+++ b/src/components/fragments/toc-section.pug
@@ -1,4 +1,4 @@
-.toc-section.js-toc
+section.wrapper.toc-section.js-toc
     h3.toc-section__title.js-toc__trigger Content
     nav.toc-section__nav 
         ul.toc-section__list 
