--- a/src/mixins/icons.pug
+++ b/src/mixins/icons.pug
@@ -5,3 +5,5 @@ mixin icon(name)
         include /img/svg/test.svg
     if name === 'test2'
         include /img/svg/test2.svg
+    if name === 'toc-arrow'
+        include /img/svg/toc-arrow.svg
