--- a/src/scss/fragments/_index.scss
+++ b/src/scss/fragments/_index.scss
@@ -7,3 +7,7 @@
 @use "toc-section.scss";
 @use "lang.scss";
 @use "author-row.scss";
+@use "scroll-list.scss";
+@use "slot-card.scss";
+@use "grid-block.scss";
+@use "bonus-card.scss";
