--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -10,6 +10,21 @@ html(lang="en")
 
         main
             include /components/blocks/section-hero.pug
+            include /components/fragments/toc-section.pug
+            section.wrapper 
+                h2 Most Popular Free Slots
+                ul.scroll-list.js-scroll-list
+                    include /components/fragments/slot-card.pug
+                    each item in slotCards
+                        +slotCard(item)
+            
+            section.wrapper
+                h2 Bonuses
+                p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                ul.grid-block 
+                    include /components/fragments/bonus-card.pug
+                    each item in bonusCards
+                        +bonusCard(item)
 
 
             include ../components/blocks/section-faq.pug 
