--- a/src/components/fragments/table.pug
+++ b/src/components/fragments/table.pug
@@ -1,11 +1,9 @@
-//- @defaultData = tablev1, "table--v1", "Test", true
+//- @defaultData = table, true
 //- @mixin
-mixin table(table, className, title, isScroll)
-    .table(class=className)
-        if title 
-            p.table__title= title
-        .table__wrap.wp-block-table.js-scroll-list
-            table.table__block
+mixin table(table,  isScroll)
+    if isScroll
+        .table(class=`${table.modificator ? table.modificator : ''}`).js-scroll-list
+            table.wp-block-table
                 if table.thead 
                     thead 
                         each tr in table.thead 
@@ -18,3 +16,17 @@ mixin table(table, className, title, isScroll)
                             tr      
                                 each td in tr   
                                     td(class=`${td.className ? td.className : ""}`)!= td.text
+    else 
+        table.wp-block-table
+            if table.thead 
+                thead 
+                    each tr in table.thead 
+                        tr 
+                            each th in tr 
+                                th(class=`${th.className ? th.className : ""}`)!= th.text
+            if table.tbody
+                tbody 
+                    each tr in table.tbody 
+                        tr      
+                            each td in tr   
+                                td(class=`${td.className ? td.className : ""}`)!= td.text
