--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -12,17 +12,20 @@
     background: var(--card-bg, #fff);
 
     & > img {
-        &:not(:first-child) {
-            margin-top: 20px;
+        margin-block: 20px 16px;
+        &:first-child {
+            margin-top: 0;
         }
-        &:not(:last-child) {
-            margin-bottom: 16px;
+        &:last-child {
+            margin-bottom: 0;
         }
     }
 
     & > .btn {
-        &:not(:first-child) {
-            margin-top: 20px;
+        margin-top: 20px;
+
+        &:first-child {
+            margin-top: 0;
         }
     }
 
