--- a/src/scss/fragments/_index.scss
+++ b/src/scss/fragments/_index.scss
@@ -12,3 +12,7 @@
 @use "grid-block.scss";
 @use "bonus-card.scss";
 @use "content-img.scss";
+@use "listing.scss";
+@use "gallery.scss";
+@use "how-to.scss";
+@use "symbol-cards.scss";
