--- a/src/components/fragments/slot-card.pug
+++ b/src/components/fragments/slot-card.pug
@@ -1,14 +1,12 @@
 //- @defaultData = slotCards[0]
-//- mixin
-include /layouts/base.pug
-block content
-    mixin slotCard(item)
-        li.slot-card
-            .slot-card__wrap 
-                img(src=`img/${item.img}` alt="")
-                .slot-card__btns
-                    each btn in item.btns 
-                        +button(btn.modificator, btn.text)
-            p.slot-card__name= item.name
-            p.slot-card__provider= item.provider
+//- @mixin
+mixin slotCard(item)
+    li.slot-card
+        .slot-card__wrap 
+            img(src=`img/${item.img}` alt="")
+            .slot-card__btns
+                each btn in item.btns 
+                    +button(btn.modificator, btn.text)
+        p.slot-card__name= item.name
+        p.slot-card__provider= item.provider
 
