--- a/src/layouts/base.pug
+++ b/src/layouts/base.pug
@@ -1,7 +1,12 @@
 // AUTO-INJECT-START
+include /components/fragments/bonus-card.pug
 include /components/fragments/button.pug
+include /components/fragments/gallery.pug
+include /components/fragments/how-to.pug
+include /components/fragments/listing.pug
 include /components/fragments/mob-btn.pug
 include /components/fragments/pros-cons.pug
+include /components/fragments/slot-card.pug
 include /components/fragments/table.pug
 // AUTO-INJECT-END
 include /mixins/icons.pug
