--- a/src/scss/settings/mixins/_common.scss
+++ b/src/scss/settings/mixins/_common.scss
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: flex-start;
     gap: 8px;
+    color: var(--text-main, #2b2b2b);
 
     --percent: calc(var(--rating, 4.5) / 5 * 100%);
 
