--- a/src/components/blocks/footer.pug
+++ b/src/components/blocks/footer.pug
@@ -1,29 +1,36 @@
 footer.footer.wrapper
+    .footer__row 
+        a.footer__logo(href="/")
+            img(src="img/logo.png", alt="") 
+        img(src="img/18+.png", alt="") 
+    
     nav.footer__nav 
-        each item in footerMenu 
-            ul.footer__nav-list 
-                for el in item
-                    li.footer__nav-item 
-                        if el.link
-                            a.footer__nav-link(href= el.link, class=`${el.class ? el.class : ""}`)= el.title
-                        else 
-                            span.footer__nav-link(href= el.link, class=`${el.class ? el.class : ""}`)= el.title
+        ul.footer__nav-list 
+            each item in footerMenu 
+                li.footer__nav-item 
+                    a.footer__nav-link(href= item.link, class=`${item.class ? item.class : ""}`)= item.title
+
+    .footer__soc 
+        | Follow us
+        ul.footer__soc-list 
+            li.footer__soc-item 
+                a.footer__soc-link(href="/")
+                    img(src="img/x.png", alt="")
+            li.footer__soc-item
+                a.footer__soc-link(href="/") 
+                    img(src="img/tg.png", alt="")
+            li.footer__soc-item
+                a.footer__soc-link(href="/") 
+                    img(src="img/inst.png", alt="")
+            li.footer__soc-item
+                a.footer__soc-link(href="/") 
+                    img(src="img/fb.png", alt="")
+    .footer__info
+        p The information on site is for general information about slot Sweet Bonanza. This site are not responsible for information accuracy provided and any financial loss resulting from the use of information in this site, despite our effort to keep the information on the website up to date.
+        p Visitors must find out about the legislation and taxation in their country of residence regarding casino games.
     if footerLogos
         ul.footer__logos    
             each item in footerLogos 
                 li  
                     img(src=`${item}`, alt="")
-    .footer__info 
-        p
-            span Responsible Gaming
-        p This website is intended for Australians living abroad or outside of Australia.
-        p Auscasinos has partnerships with many of the casinos presented on the website. We receive a referral commission from these when you click the link. All reviews and articles are unbiased and objective regardless of these agreements.
-    .footer__bottom 
-        if footerLinks 
-            ul.footer__links 
-                each item in footerLinks 
-                    li.footer__links-item 
-                        a.footer__links-link(href= item.link)= item.name
-        p.footer__copyright
-            img(src="img/18+.png" alt="") 
-            | Copyright © 2024. All right reserved
+    p.footer__copyright  Copyright © 1win. All rights reserved.
