--- a/src/scss/blocks/section-faq.scss
+++ b/src/scss/blocks/section-faq.scss
@@ -1,59 +1,48 @@
 @use "../settings" as *;
 
 .section-faq {
-    display: grid;
-    grid-template-columns: 1fr 588px;
-    column-gap: 20px;
-    row-gap: 32px;
-
-    @include media-max-lg {
-        grid-template-columns: 1fr 1fr;
-    }
-
-    @include media-max-mlg {
-        grid-template-columns: 1fr;
-    }
-
-    @include media-max-sm {
-        flex-direction: column;
-        align-items: stretch;
-        gap: 28px;
-    }
-
     &__list {
-        @include flex(column, stretch, flex-start, 8px);
+        @include flex(column, stretch, flex-start);
         flex: 1;
+        margin-top: 24px;
     }
 
     &__item {
         @include relative();
         &:not(:first-child) {
-            border-top: 1px solid #43483e;
-        }
-
-        p {
-            margin-block: 8px;
+            padding-top: 16px;
+            margin-top: 16px;
+            border-top: 1px solid var(--line-color, #e4ebed);
         }
 
         &[open] {
             summary {
-                svg {
-                    transform: translate(0, -50%) rotate(-180deg);
+                &::after {
+                    transform: rotate(-180deg);
                 }
             }
         }
     }
 
+    &__index {
+        @include flex(row, center, center);
+        min-width: 24px;
+        height: 24px;
+        width: 24px;
+        border-radius: 16px;
+        background: var(--accent-secondary, #eff8ff);
+        color: var(--accent-base, #3b8ffe);
+        text-align: center;
+        @include font-m-medium;
+    }
+
     summary {
         @include relative();
-        @include flex(row, center, space-between, 8px);
-        min-height: 64px;
-
-        padding: 8px 0;
-        padding-right: 48px;
+        @include flex(row, center, flex-start, 16px);
+        color: var(--text-main, #2b2b2b);
+        @include font-lg-medium-fix;
 
         cursor: pointer;
-
         list-style: none;
 
         &::marker {
@@ -65,50 +54,10 @@
         }
 
         &::after {
-            content: "";
-            @include absolute(50%, $right: 4px);
-
-            transform: translate(0, -50%);
-            @include size(40px, 40px);
-
-            border-radius: 50%;
-            pointer-events: none;
-
-            @include transition(background);
-        }
-
-        @include hover {
-            &::after {
-                background: var(--on-surface-variant-opacity-008, rgba(202, 196, 208, 0.08));
-            }
-        }
-
-        @include active {
-            &::after {
-                background: var(--on-surface-variant-opacity-012, rgba(202, 196, 208, 0.12));
-            }
-        }
-
-        svg {
-            @include absolute(50%, $right: 0);
-            transform: translate(0, -50%);
-
-            @include minSize(48px, 48px);
-            @include size(48px, 48px);
+            content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none"><path d="m6 9.667 6 6 6-6" stroke="%233B8FFE" stroke-width="2.4" stroke-linecap="round"/></svg>');
+            @include size(24px, 24px);
+            margin-left: auto;
             @include transition(transform);
-        }
-
-        @include media-max-sm {
-            padding-block: 0;
-            min-height: 48px;
-        }
-    }
-
-    .join-form {
-        margin-top: 59px;
-
-        @include media-max-mlg {
-            margin-top: 0;
         }
     }
 }
