add mob-btn & go-up & sidebar

--- a/src/components/blocks/section-hero.pug
+++ b/src/components/blocks/section-hero.pug
@@ -2,7 +2,7 @@ include /layouts/base.pug
 block content
     section.wrapper.section-hero
         h1 Sugar Rush Slot Online
-        span.section-hero__rate(style="--rating: 4.8;") 4.8
+        span.section-hero__rating(style="--rating: 4.8;") 4.8
         .section-hero__demo(style="background-image: url('img/sugar-rush.png')") 
             .section-hero__btns 
                 +button("btn--primary", "Play for real money")
