--- a/src/mixins/icons.pug
+++ b/src/mixins/icons.pug
@@ -1,4 +1,6 @@
 mixin icon(name)
+    if name === 'go-up'
+        include /img/svg/go-up.svg
     if name === 'lang-arrow'
         include /img/svg/lang-arrow.svg
     if name === 'test'
