--- a/src/scss/fragments/_index.scss
+++ b/src/scss/fragments/_index.scss
@@ -16,3 +16,6 @@
 @use "gallery.scss";
 @use "how-to.scss";
 @use "symbol-cards.scss";
+@use "sidebar-info.scss";
+@use "sidebar-bonus.scss";
+@use "last-winners.scss";
