--- a/src/components/fragments/bonus-card.pug
+++ b/src/components/fragments/bonus-card.pug
@@ -3,7 +3,7 @@
 mixin bonusCard(item)
     li.bonus-card
         img(src=`img/${item.img}` alt="")
-        span.bonus-card__rate(style=`--rating: ${item.rate};`)= item.rate
+        span.bonus-card__rating(style=`--rating: ${item.rate};`)= item.rate
         p.bonus-card__provider= item.provider
         p.bonus-card__bonus= item.bonus
         if(item.btn)
