--- a/src/scss/blocks/section-hero.scss
+++ b/src/scss/blocks/section-hero.scss
@@ -11,7 +11,7 @@
         margin: 0;
     }
 
-    &__rate {
+    &__rating {
         color: var(--text-main, #2b2b2b);
 
         @include rateStars(20px);
@@ -64,7 +64,7 @@
             grid-column: 1 / 2;
         }
 
-        &__rate {
+        &__rating {
             grid-column: 2 / 3;
         }
     }
@@ -76,7 +76,7 @@
             margin-top: 16px;
         }
 
-        &__rate {
+        &__rating {
             margin-right: auto;
             margin-top: 8px;
         }
