--- a/src/scss/fragments/bonus-card.scss
+++ b/src/scss/fragments/bonus-card.scss
@@ -18,7 +18,7 @@
         object-position: center center;
     }
 
-    &__rate {
+    &__rating {
         @include rateStarsOne(20px);
         flex-direction: row-reverse;
 
