--- a/src/scss/fragments/listing.scss
+++ b/src/scss/fragments/listing.scss
@@ -57,7 +57,7 @@
         }
     }
 
-    &__rate {
+    &__rating {
         @include rateStars(20px);
         flex-direction: row-reverse;
         font-weight: 500;
