--- a/src/scss/fragments/mob-btn.scss
+++ b/src/scss/fragments/mob-btn.scss
@@ -4,37 +4,35 @@
     @include sticky($bottom: 0px, $left: 0);
     z-index: $z-index-fixed;
 
-    padding: 12px 16px 12px 70px;
-    background: var(--surface-container, #1d211a);
+    padding: 12px;
+    background: var(--secondary-button-bg, #4ca8ff);
 
     display: flex;
     align-items: center;
-    gap: 4px;
+    gap: 12px;
 
-    img,
-    svg {
-        position: absolute;
-        left: 16px;
-        bottom: 0;
-        max-width: 46px;
-        max-height: 56px;
+    & > img,
+    & > svg {
+        max-width: 64px;
     }
 
     .btn {
-        margin-left: auto;
-        border-radius: 8px;
-        padding: 8px;
-        font-size: rem(18);
-        width: 145px;
-        min-width: min-content;
+        margin-left: -4px;
+        padding: 8px 16px;
     }
 
     &__text {
-        @include flex(column, flex-start, center, 2px);
-        color: var(--on-surface, #e1e4d9);
+        margin-right: auto;
+        @include flex(column, flex-start, center, 4px);
+
+        color: var(--button-color, #fff);
+        @include font-m-semibold;
 
         span {
-            color: var(--primary, #7ade50);
+            @include rateStars(20px);
+            flex-direction: row-reverse;
+            color: #fff;
+            @include font-xs;
         }
     }
 
