--- a/src/scss/settings/mixins/_fonts.scss
+++ b/src/scss/settings/mixins/_fonts.scss
@@ -59,6 +59,12 @@ $font-size-default: 16;
     }
 }
 
+@mixin font-xl-semibold-fix() {
+    font-size: rem(20);
+    line-height: 140%;
+    font-weight: 600;
+}
+
 @mixin font-lg() {
     font-size: rem(18);
     line-height: 150%;
@@ -107,6 +113,12 @@ $font-size-default: 16;
 
 @mixin font-s() {
     font-size: rem(14);
+    line-height: 150%;
+    font-weight: 400;
+}
+
+@mixin font-xs() {
+    font-size: rem(12);
     line-height: 150%;
     font-weight: 400;
 }
